@@ -566,7 +566,8 @@ class Sys {
     return $status;
   }
   
-  static method select : int ($nfds : int, $readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval) {
+  static method select : int ($readfds : Sys::Select::Fd_set, $writefds : Sys::Select::Fd_set, $exceptfds : Sys::Select::Fd_set, $timeout : Sys::Time::Timeval) {
+    my $nfds = 1024;
     my $status = Sys::Select->select($nfds, $readfds, $writefds, $exceptfds, $timeout);
     return $status;
   }
